force-app/main/default/objects/ATAK_Work_Log__c/ATAK_Work_Log__c.object-meta.xml
<CustomObject>
    <label>ATAK Work Log</label>
    <nameField>
        <displayFormat>AWL-{0000000}</displayFormat>
        <label>ATAK Work Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATAK Work Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>