force-app/main/default/objects/ATAK_Work_Log__c/fields/Performance_Date__c.field-meta.xml
<CustomField>
    <fullName>Performance_Date__c</fullName>
    <label>Performance Date</label>
    <type>Date</type>
</CustomField>