force-app/main/default/objects/ATAK_Work_Log__c/fields/Performance_Resource_Code__c.field-meta.xml
<CustomField>
    <fullName>Performance_Resource_Code__c</fullName>
    <label>Performance Resource Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>