force-app/main/default/objects/ATAK_Work_Log__c/fields/Performance_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Performance_Resource_Type__c</fullName>
    <label>Performance Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>