force-app/main/default/objects/ATAK_Work_Log__c/fields/Quantity_Registration_Unit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Registration_Unit__c</fullName>
    <label>Quantity Registration Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>