force-app/main/default/objects/ATAK_Work_Log__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TimeSheetEntry</fullName>
            </value>
            <value>
                <fullName>MileageEntry</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>