force-app/main/default/objects/ATAK_Work_Log__c/fields/Time_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Time_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Sheet</label>
    <referenceTo>TimeSheet</referenceTo>
    <relationshipLabel>ATAK Work Logs</relationshipLabel>
    <relationshipName>ATAK_Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>